--- a/Process.xaml
+++ b/Process.xaml
@@ -7,7 +7,7 @@
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>865,827</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>865,3818</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>ProcessTransaction_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <sco:Collection x:TypeArguments="x:String">
@@ -77,15 +77,15 @@
       <AssemblyReference>WindowsBase</AssemblyReference>
       <AssemblyReference>UiPath.System.Activities.Design</AssemblyReference>
       <AssemblyReference>System.ValueTuple</AssemblyReference>
-      <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
       <AssemblyReference>NPOI</AssemblyReference>
       <AssemblyReference>UiPath.Excel.Activities.Design</AssemblyReference>
       <AssemblyReference>Microsoft.Bcl.AsyncInterfaces</AssemblyReference>
       <AssemblyReference>UiPath.Database.Activities</AssemblyReference>
       <AssemblyReference>System.Reflection.Metadata</AssemblyReference>
+      <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence sap2010:Annotation.AnnotationText="Description: In this file all other process specific files will be invoked. If an application exception occurs, the current transaction can be retried. If a BRE is thrown, the transaction will be skipped. Can be a flowchart or sequence. " DisplayName="ProcessTransaction" sap:VirtualizedContainerService.HintSize="875,722" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence sap2010:Annotation.AnnotationText="Description: In this file all other process specific files will be invoked. If an application exception occurs, the current transaction can be retried. If a BRE is thrown, the transaction will be skipped. Can be a flowchart or sequence. " DisplayName="ProcessTransaction" sap:VirtualizedContainerService.HintSize="875,3753" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="x:String" Name="strTituloPaginaSECOP" />
       <Variable x:TypeArguments="ui:Browser" Name="uiNavegador" />
@@ -104,7 +104,7 @@
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
     <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="813,92" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="Trace" Message="[&quot;INICIO - Procesando transacción: &quot;+in_TransactionItem(&quot;UID&quot;).ToString()+&quot;. Búsqueda por: [&quot;+in_TransactionItem(&quot;PAR_VALOR&quot;).ToString+&quot;]&quot;]" />
-    <Assign DisplayName="Asignar titulo de ventana desde parámetros" sap:VirtualizedContainerService.HintSize="813,81" sap2010:WorkflowViewState.IdRef="Assign_1">
+    <Assign DisplayName="Asignar titulo de ventana desde parámetros" sap:VirtualizedContainerService.HintSize="813,82" sap2010:WorkflowViewState.IdRef="Assign_1">
       <Assign.To>
         <OutArgument x:TypeArguments="x:String">[strTituloPaginaSECOP]</OutArgument>
       </Assign.To>
@@ -112,7 +112,7 @@
         <InArgument x:TypeArguments="x:String">[in_Config("016").ToString()]</InArgument>
       </Assign.Value>
     </Assign>
-    <TryCatch DisplayName="Try Consultar y Persistir Datos" sap:VirtualizedContainerService.HintSize="813,184" sap2010:WorkflowViewState.IdRef="TryCatch_1">
+    <TryCatch DisplayName="Try Consultar y Persistir Datos" sap:VirtualizedContainerService.HintSize="813,3238" sap2010:WorkflowViewState.IdRef="TryCatch_1">
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
           <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -120,7 +120,7 @@
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
       <TryCatch.Try>
-        <Sequence sap:VirtualizedContainerService.HintSize="775,2887" sap2010:WorkflowViewState.IdRef="Sequence_19">
+        <Sequence sap:VirtualizedContainerService.HintSize="775,3010" sap2010:WorkflowViewState.IdRef="Sequence_19">
           <Sequence.Variables>
             <Variable x:TypeArguments="x:String" Name="strUpdate" />
             <Variable x:TypeArguments="ui:DatabaseConnection" Name="sqlConnection" />
@@ -130,20 +130,20 @@
               <x:Boolean x:Key="IsExpanded">True</x:Boolean>
             </scg:Dictionary>
           </sap:WorkflowViewStateService.ViewState>
-          <Sequence DisplayName="Consultar datos" sap:VirtualizedContainerService.HintSize="713,789" sap2010:WorkflowViewState.IdRef="Sequence_10">
+          <Sequence DisplayName="Consultar datos" sap:VirtualizedContainerService.HintSize="713,778" sap2010:WorkflowViewState.IdRef="Sequence_10">
             <sap:WorkflowViewStateService.ViewState>
               <scg:Dictionary x:TypeArguments="x:String, x:Object">
                 <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                 <x:Boolean x:Key="IsPinned">False</x:Boolean>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
-            <ui:BrowserScope Browser="{x:Null}" SearchScope="{x:Null}" TimeoutMS="{x:Null}" BrowserType="Chrome" DisplayName="Attach Browser 'Secop iiC Page'" sap:VirtualizedContainerService.HintSize="580,678" sap2010:WorkflowViewState.IdRef="BrowserScope_1" InformativeScreenshot="9e5fafc0b31827942ab5cfa951e79ee9" Selector="&lt;html title='Buscar proceso' /&gt;" UiBrowser="[uiNavegador]">
+            <ui:BrowserScope Browser="{x:Null}" SearchScope="{x:Null}" TimeoutMS="{x:Null}" BrowserType="Chrome" DisplayName="Attach Browser 'Secop iiC Page'" sap:VirtualizedContainerService.HintSize="580,667" sap2010:WorkflowViewState.IdRef="BrowserScope_1" InformativeScreenshot="9e5fafc0b31827942ab5cfa951e79ee9" Selector="&lt;html title='Buscar proceso' /&gt;" UiBrowser="[uiNavegador]">
               <ui:BrowserScope.Body>
                 <ActivityAction x:TypeArguments="x:Object">
                   <ActivityAction.Argument>
                     <DelegateInArgument x:TypeArguments="x:Object" Name="ContextTarget" />
                   </ActivityAction.Argument>
-                  <Sequence sap:VirtualizedContainerService.HintSize="546,531" sap2010:WorkflowViewState.IdRef="Sequence_17">
+                  <Sequence sap:VirtualizedContainerService.HintSize="546,520" sap2010:WorkflowViewState.IdRef="Sequence_17">
                     <sap:WorkflowViewStateService.ViewState>
                       <scg:Dictionary x:TypeArguments="x:String, x:Object">
                         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -209,11 +209,12 @@
               <InArgument x:TypeArguments="x:Int32">[out_CantRegistrosInsertados+iCantRegsInsertados]</InArgument>
             </Assign.Value>
           </Assign>
-          <Sequence DisplayName="Consulta Entidades Pendientes" sap:VirtualizedContainerService.HintSize="713,863" sap2010:WorkflowViewState.IdRef="Sequence_22">
+          <Sequence DisplayName="Consulta Entidades Pendientes" sap:VirtualizedContainerService.HintSize="713,1064" sap2010:WorkflowViewState.IdRef="Sequence_22">
             <Sequence.Variables>
               <Variable x:TypeArguments="sd:DataTable" Name="assets" />
               <Variable x:TypeArguments="ui:DatabaseConnection" Name="objConexion" />
               <Variable x:TypeArguments="sd:DataTable" Name="dtEntidadesPendientes" />
+              <Variable x:TypeArguments="x:Int32" Name="iCantReprocesosPendientes" />
             </Sequence.Variables>
             <sap:WorkflowViewStateService.ViewState>
               <scg:Dictionary x:TypeArguments="x:String, x:Object">
@@ -221,7 +222,7 @@
                 <x:Boolean x:Key="IsPinned">False</x:Boolean>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
-            <Sequence DisplayName="Consulta BD" sap:VirtualizedContainerService.HintSize="548,81" sap2010:WorkflowViewState.IdRef="Sequence_24">
+            <Sequence DisplayName="Consulta BD - Inicial de entidades pendientes" sap:VirtualizedContainerService.HintSize="548,81" sap2010:WorkflowViewState.IdRef="Sequence_24">
               <sap:WorkflowViewStateService.ViewState>
                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
                   <x:Boolean x:Key="IsExpanded">False</x:Boolean>
@@ -236,9 +237,17 @@
               </ui:ExecuteQuery>
               <ui:DatabaseDisconnect DatabaseConnection="[objConexion]" DisplayName="Disconnect" sap:VirtualizedContainerService.HintSize="388,25" sap2010:WorkflowViewState.IdRef="DatabaseDisconnect_4" />
             </Sequence>
-            <ui:InterruptibleWhile CurrentIndex="{x:Null}" DisplayName="While" sap:VirtualizedContainerService.HintSize="548,631" sap2010:WorkflowViewState.IdRef="InterruptibleWhile_1">
+            <Assign DisplayName="Assign - Contador reintentos entidades pendientes" sap:VirtualizedContainerService.HintSize="548,82" sap2010:WorkflowViewState.IdRef="Assign_10">
+              <Assign.To>
+                <OutArgument x:TypeArguments="x:Int32">[iCantReprocesosPendientes]</OutArgument>
+              </Assign.To>
+              <Assign.Value>
+                <InArgument x:TypeArguments="x:Int32">0</InArgument>
+              </Assign.Value>
+            </Assign>
+            <ui:InterruptibleWhile CurrentIndex="{x:Null}" DisplayName="While - Aún hay entidades pendientes y no se ha alcanzado el límite de reintentos" sap:VirtualizedContainerService.HintSize="548,726" sap2010:WorkflowViewState.IdRef="InterruptibleWhile_1">
               <ui:InterruptibleWhile.Body>
-                <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="512,465" sap2010:WorkflowViewState.IdRef="Sequence_25">
+                <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="512,560" sap2010:WorkflowViewState.IdRef="Sequence_25">
                   <sap:WorkflowViewStateService.ViewState>
                     <scg:Dictionary x:TypeArguments="x:String, x:Object">
                       <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -246,28 +255,16 @@
                   </sap:WorkflowViewStateService.ViewState>
                   <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="PersistirResultadosPendientes.xaml - Invoke Workflow File" sap:VirtualizedContainerService.HintSize="450,113" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_6" UnSafe="False" WorkflowFileName="PersistirResultadosPendientes.xaml">
                     <ui:InvokeWorkflowFile.Arguments>
-                      <InArgument x:TypeArguments="sd:DataTable" x:Key="in_DatosConsultados">
-                        <mva:VisualBasicValue x:TypeArguments="sd:DataTable" ExpressionText="dtEntidadesPendientes" />
-                      </InArgument>
-                      <InArgument x:TypeArguments="x:String" x:Key="in_Palabra">
-                        <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="in_TransactionItem(&quot;PAR_VALOR&quot;).ToString()" />
-                      </InArgument>
-                      <InArgument x:TypeArguments="scg:Dictionary(x:String, x:Object)" x:Key="in_Config">
-                        <mva:VisualBasicValue x:TypeArguments="scg:Dictionary(x:String, x:Object)" ExpressionText="in_Config" />
-                      </InArgument>
-                      <OutArgument x:TypeArguments="x:Int32" x:Key="iCantRegs">
-                        <mva:VisualBasicReference x:TypeArguments="x:Int32" ExpressionText="iCantRegsInsertados" />
-                      </OutArgument>
-                      <InArgument x:TypeArguments="ui:Browser" x:Key="in_UINavegador">
-                        <mva:VisualBasicValue x:TypeArguments="ui:Browser" ExpressionText="uiNavegador" />
-                      </InArgument>
-                      <InArgument x:TypeArguments="sd:DataRow" x:Key="in_TransactionItem">
-                        <mva:VisualBasicValue x:TypeArguments="sd:DataRow" ExpressionText="in_TransactionItem" />
-                      </InArgument>
+                      <InArgument x:TypeArguments="sd:DataTable" x:Key="in_DatosConsultados">[dtEntidadesPendientes]</InArgument>
+                      <InArgument x:TypeArguments="x:String" x:Key="in_Palabra">[in_TransactionItem("PAR_VALOR").ToString()]</InArgument>
+                      <InArgument x:TypeArguments="scg:Dictionary(x:String, x:Object)" x:Key="in_Config">[in_Config]</InArgument>
+                      <OutArgument x:TypeArguments="x:Int32" x:Key="iCantRegs">[iCantRegsInsertados]</OutArgument>
+                      <InArgument x:TypeArguments="ui:Browser" x:Key="in_UINavegador">[uiNavegador]</InArgument>
+                      <InArgument x:TypeArguments="sd:DataRow" x:Key="in_TransactionItem">[in_TransactionItem]</InArgument>
                     </ui:InvokeWorkflowFile.Arguments>
                   </ui:InvokeWorkflowFile>
                   <ui:ClearDataTable DataTable="[dtEntidadesPendientes]" DisplayName="Clear Data Table" sap:VirtualizedContainerService.HintSize="450,80" sap2010:WorkflowViewState.IdRef="ClearDataTable_2" />
-                  <Sequence DisplayName="Consulta BD" sap:VirtualizedContainerService.HintSize="450,81" sap2010:WorkflowViewState.IdRef="Sequence_26">
+                  <Sequence DisplayName="Consulta BD - Entidades pendientes luego de reproceso" sap:VirtualizedContainerService.HintSize="450,81" sap2010:WorkflowViewState.IdRef="Sequence_26">
                     <sap:WorkflowViewStateService.ViewState>
                       <scg:Dictionary x:TypeArguments="x:String, x:Object">
                         <x:Boolean x:Key="IsExpanded">False</x:Boolean>
@@ -282,14 +279,22 @@
                     </ui:ExecuteQuery>
                     <ui:DatabaseDisconnect DatabaseConnection="[objConexion]" DisplayName="Disconnect" sap:VirtualizedContainerService.HintSize="388,25" sap2010:WorkflowViewState.IdRef="DatabaseDisconnect_5" />
                   </Sequence>
+                  <Assign DisplayName="Assign - Ajuste contador reintentos entidades pendientes" sap:VirtualizedContainerService.HintSize="450,82" sap2010:WorkflowViewState.IdRef="Assign_11">
+                    <Assign.To>
+                      <OutArgument x:TypeArguments="x:Int32">[iCantReprocesosPendientes]</OutArgument>
+                    </Assign.To>
+                    <Assign.Value>
+                      <InArgument x:TypeArguments="x:Int32">[iCantReprocesosPendientes+1]</InArgument>
+                    </Assign.Value>
+                  </Assign>
                 </Sequence>
               </ui:InterruptibleWhile.Body>
               <ui:InterruptibleWhile.Condition>
-                <mva:VisualBasicValue x:TypeArguments="x:Boolean" DisplayName="Visual basic value" ExpressionText="dtEntidadesPendientes.Rows.Count &gt; 0" />
+                <mva:VisualBasicValue x:TypeArguments="x:Boolean" DisplayName="Visual basic value" ExpressionText="dtEntidadesPendientes.Rows.Count &gt; 0 and iCantReprocesosPendientes &lt; Integer.Parse(in_Config(&quot;029&quot;).ToString())" />
               </ui:InterruptibleWhile.Condition>
             </ui:InterruptibleWhile>
           </Sequence>
-          <Sequence DisplayName="Registro resultado ejecución en base de datos" sap:VirtualizedContainerService.HintSize="713,487" sap2010:WorkflowViewState.IdRef="Sequence_21">
+          <Sequence DisplayName="Registro resultado ejecución en base de datos" sap:VirtualizedContainerService.HintSize="713,463" sap2010:WorkflowViewState.IdRef="Sequence_21">
             <Sequence.Variables>
               <Variable x:TypeArguments="x:Int32" Name="iTmpCant" />
               <Variable x:TypeArguments="ui:DatabaseConnection" Name="sqlConnection" />
